--- a/public/404.html
+++ b/public/404.html
@@ -17,8 +17,9 @@
 			<div class="notfound-404">
 				<h1>4<span>0</span>4</h1>
 			</div>
+			<br>
 			<p>La page que vous essayez de voir n'existe pas ou est temporairement indisponible. Réésayez plus tard !</p>
-			<a href="/">Page d'accueil</a>
+			<a href="/egg.html">Page d'accueil</a>
 		</div>
 	</div>
 </body>
