--- a/public/egg.html
+++ b/public/egg.html
@@ -49,12 +49,38 @@
 <h3>Dernière partie :
     <span id="lastscore">0</span>
 </h3>
-<h3>Meilleur score :
+<h3 class="last-title">Meilleur score :
     <span id="bestscore">0</span>
 </h3>
+<a class="egg-gag" href="/">Retourner sur le site (Vraiment)</a>
 <style>
+    h1{
+        margin-top: 10%;
+    }
     h2, h3{
         color: antiquewhite;
+    }
+    .last-title{
+        margin-bottom: 40px;
+    }
+
+    a
+    {
+        list-style: none;
+        transition: 1s;
+    }
+    a:hover{
+        text-decoration: none;
+        color: black;
+        background-color: white;
+        transition: 1s;
+    }
+    .egg-gag{
+        background-color: black;
+        color: white;
+        height: 40px;
+        padding: 15px;
+        border-radius: 10px;
     }
 </style>
 
